--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,6 @@ dependencies = [
     "typing-extensions"
 ]
 description = "A generic generator of Dockerfiles and Singularity recipes."
-# Version from setuptools_scm
 dynamic = ["version"]
 license = {text = "Apache License, 2.0"}
 maintainers = [{name = "Jakub Kaczmarzyk", email = "jakub.kaczmarzyk@gmail.com"}]
@@ -87,6 +86,9 @@ version-file = "neurodocker/_version.py"
 
 [tool.hatch.build.targets.wheel]
 packages = ["neurodocker"]
+
+[tool.hatch.version]
+source = "vcs"
 
 [tool.isort]
 combine_as_imports = true
